--- a/Nithin2003/Views/Dashboard/UserLoanRequest.cshtml
+++ b/Nithin2003/Views/Dashboard/UserLoanRequest.cshtml
@@ -68,11 +68,11 @@
                                         </div>
 
                                         <input class="form-control" asp-for="@Model.UserComment" placeholder="Write Your Comment" type="text">
-
+                                       
 
                                     </div>
                                 </div>
-                                
+                                <span asp-validation-for="@Model.UserComment" class="text-danger"></span>
                                 @*<div class="form-group">
                                     <div class="input-group input-group-merge input-group-alternative">
                                         <div class="input-group-prepend">
