--- a/Nithin2003/Views/Dashboard/VerifyEmail.cshtml
+++ b/Nithin2003/Views/Dashboard/VerifyEmail.cshtml
@@ -1,4 +1,5 @@
-﻿@{
+﻿@model UserEmailVerification
+@{
     ViewData["Title"] = "VerifyEmail";
     Layout = "~/Views/Shared/_Form.cshtml";
 }
@@ -10,8 +11,8 @@
             <div class="header-body text-center mb-7">
                 <div class="row justify-content-center">
                     <div class="col-xl-5 col-lg-6 col-md-8 px-5">
-                        <h1 class="text-white">Welcome To Email Verfication</h1>
-                        @* <p class="text-lead text-white"> To Sign In </p>*@
+                        <h1 class="text-white">Verify Your Email</h1>
+
                     </div>
                 </div>
             </div>
@@ -28,56 +29,145 @@
             <div class="col-lg-5 col-md-7">
                 <div class="card bg-secondary border-0 mb-0">
                     <div class="card-header bg-transparent pb-5">
-                        @*<div class="text-muted text-center mt-2 mb-3"><small>Sign in with</small></div>
-                        <div class="btn-wrapper text-center">
-                        <a href="#" class="btn btn-neutral btn-icon">
-                        <span class="btn-inner--icon"><img src="../assets/img/icons/common/github.svg"></span>
-                        <span class="btn-inner--text">Github</span>
-                        </a>
-                        <a href="#" class="btn btn-neutral btn-icon">
-                        <span class="btn-inner--icon"><img src="../assets/img/icons/common/google.svg"></span>
-                        <span class="btn-inner--text">Google</span>
-                        </a>
-                        </div>
-                        </div>*@
+
                         <div class="card-body px-lg-5 py-lg-5">
                             <div class="text-center text-muted mb-4">
-                                <small></small>
                             </div>
                             <form action="/Dashboard/VerifyEmail" method="post">
 
-                                <div class="form-group mb-3">
-                                    <div class="input-group input-group-merge input-group-alternative">
-                                        <div class="input-group-prepend">
-                                            <span class="input-group-text"><i class="ni ni-email-83"></i></span>
+
+                                @*<input type="submit"  class="btn btn-primary my-4" name="btnsubmit" value="Send OTP" />*@
+                                @if (Context.Session.GetString("OTPGenerated") != "True")
+                                {
+                                    <h3> Check Below Your email , if it is in-correct, please update your details </h3>
+                                    <div class="form-group mb-3">
+                                        <div class="input-group input-group-merge input-group-alternative">
+                                            <div class="input-group-prepend">
+                                                <span class="input-group-text"><i class="ni ni-email-83"></i></span>
+                                            </div>
+
+                                            <input asp-for="@Model.Email" class="form-control" disabled />
+
                                         </div>
-
-                                        <input class="form-control" placeholder="Enter Email " type="email">
-
+                                        <div class="btn"> <a asp-controller="Users" asp-action="EditDetails" asp-route-Username="@Model.Username">Edit</a></div>
                                     </div>
-                                </div>
-                                <div class="form-group mb-3">
-                                    <div class="input-group input-group-merge input-group-alternative">
-                                        <div class="input-group-prepend">
-                                            <span class="input-group-text"><i class="ni ni-mobile-button"></i></span>
-                                        </div>
 
-                                        <input class="form-control" placeholder="Enter OTP " type="number">
+                                    <td><div class="btn"> <a asp-controller="Dashboard" asp-action="SendOTP" asp-route-Username="@Model.Username">Send OTP</a></div></td>
 
-
-                                    </div>
-                                </div>
-                                <div class="text-center">
-                                    <input type="submit" class="btn btn-primary my-4" name="btnsubmit" value="Submit" />
+                                }
+                                else
+                                {
                                     
+                                    <h3> Enter the OTP, OTP has been sent to Your Email </h3>
+                                    <div class="form-group mb-3">
+                                        <div class="input-group input-group-merge input-group-alternative">
+                                            <div class="input-group-prepend">
+                                                <span class="input-group-text"><i class="ni ni-mobile-button"></i></span>
+                                            </div>
+                                           
+                                            <input class="form-control" asp-for="@Model.OTP" placeholder="Enter OTP" type="number" value="Enter OTP">
+                                            <span asp-validation-for="@Model.OTP" class="text-danger"></span>
 
-                                </div>
+                                        </div>
+                                    </div>
+                                    <div class="text-center">
+                                        <input type="submit" class="btn btn-primary my-4" name="btnsubmit" value="Validate" />
+                                        @*<td><div class="btn"> <a asp-controller="Dashboard" asp-action="ValidateOTP" asp-route-OTP="@Model.OTP">Validate</a></div></td>*@
+                                        <a asp-controller="Home" asp-action="Index" class="btn btn-primary my-4" type="button">Back To Home</a>
+
+                                    </div>
+                                }
 
                             </form>
+                            @if (Context.Session.GetString("OTPGenerated") == "True")
+                            {
+
+
+                                <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+                                @* <script>
+                            var timer2 = "3:01";
+                            var interval = setInterval(function () {
+                            var timer = timer2.split(':');
+                            //by parsing integer, I avoid all extra string processing
+                            var minutes = parseInt(timer[0], 10);
+                            var seconds = parseInt(timer[1], 10);
+                            --seconds;
+                            minutes = (seconds < 0) ? --minutes : minutes;
+                            if (minutes < 0) {
+                            clearInterval(interval);
+                            // Make Ajax call to controller.
+                            }
+                            seconds = (seconds < 0) ? 59 : seconds;
+                            seconds = (seconds < 10) ? '0' + seconds : seconds;
+                            //minutes = (minutes < 10) ? minutes : minutes;
+                            $('.countdown').html(minutes + ':' + seconds);
+                            timer2 = minutes + ':' + seconds;
+                            }, 1000);
+                            </script>
+
+                            <div class="form-group">
+                            OTP is valid till:
+                            <label id="lblcountdown" class="countdown"></label>
+                            </div>*@
+
+
+                                <a onclick="startResendTimer()" id="resendBtn" asp-controller="Dashboard" asp-action="SendOTP" asp-route-Username="@Context.Session.GetString("Username")" disabled class="disabledAnchor">ReSend OTP</a>
+                                
+                                        
+                                  
+                                    
+      @*                          <button id="resendBtn" onclick="startResendTimer()">Resend OTP</button>*@
+                                <p id="timer"></p>
+                                <script>
+                                   
+                                    window.onload = ancorDisabled;
+                                    window.onload = startResendTimer;
+                                    let timer;
+                                    let countdown = 60; // Set the countdown duration in seconds
+                                    function ancorDisabled()
+                                    {
+                                        document.getElementById('resendBtn').disabled = true;
+                                    }
+                                    function startResendTimer() {
+                                        // Disable the button during the countdown
+                                        document.getElementById('resendBtn').disabled = true;
+
+                                        // Start the countdown
+                                        timer = setInterval(updateTimer, 1000);
+                                    }
+
+                                    function updateTimer() {
+                                        const timerElement = document.getElementById('timer');
+
+                                        if (countdown > 0) {
+                                            timerElement.textContent = `Resend in ${countdown} seconds`;
+                                            countdown--;
+                                        } else {
+                                            // Enable the button when the countdown reaches zero
+                                            document.getElementById('resendBtn').disabled = false;
+                                            timerElement.textContent = '';
+
+                                            // Reset countdown for the next attempt
+                                            countdown = 60;
+
+                                            // Stop the timer
+                                            clearInterval(timer);
+                                        }
+                                    }
+
+                                    </script>
+                                  <style>
+                                    .disabledAnchor a {
+                                        pointer-events: none !important;
+                                        cursor: default;
+                                        color: white;
+                                    }
+                                  </style>
+                            }
                         </div>
-                    </div>                    
+                    </div>
                 </div>
             </div>
         </div>
-    </div>    
+    </div>
 </div>
