--- a/Nithin2003/Views/Shared/_Form.cshtml
+++ b/Nithin2003/Views/Shared/_Form.cshtml
@@ -1,10 +1,4 @@
-﻿
-
-
-
-
-
-<!--
+﻿<!--
 =========================================================
 * Argon Dashboard - v1.2.0
 =========================================================
@@ -40,7 +34,7 @@
     <!-- Navbar -->
     <nav id="navbar-main" class="navbar navbar-horizontal navbar-transparent navbar-main navbar-expand-lg navbar-light">
         <div class="container">
-            <a class="navbar-brand" href="dashboard.html">                
+            <a class="navbar-brand" href="dashboard.html">
                 @*<img src="~/argon-assets/img/brand/white.png">*@
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar-collapse" aria-controls="navbar-collapse" aria-expanded="false" aria-label="Toggle navigation">
@@ -62,67 +56,30 @@
                         </div>
                     </div>
                 </div>
-                  <ul class="navbar-nav mr-auto">
-                    <li class="nav-item">
-                        @*<a href="dashboard.html" class="nav-link">*@
-
-                        <a asp-controller="Home" asp-action="Index" type="button" class="nav-link"><span>Nithin</span> </a>
-                        
-                        @*</a>*@
-                    </li>
-                   @* <li class="nav-item">
-                        <a href="login.html" class="nav-link">
-                            <span class="nav-link-inner--text">Login</span>
-                        </a>
-                    </li>*@
-                    <li class="nav-item">
-                        @*<a  class="nav-link">
-                            
-                            <span class="nav-link-inner--text">Register</span>
-                        </a>*@
-
-                        <a asp-controller="Users" asp-action="AddDetails" type="button" class="nav-link"><span>Sign Up</span> </a>
-                    </li>
-                  </ul>
-                @*<hr class="d-lg-none" />
-                <ul class="navbar-nav align-items-lg-center ml-lg-auto">
-                    <li class="nav-item">
-                        <a class="nav-link nav-link-icon" href="https://www.facebook.com/creativetim" target="_blank" data-toggle="tooltip" data-original-title="Like us on Facebook">
-                            <i class="fab fa-facebook-square"></i>
-                            <span class="nav-link-inner--text d-lg-none">Facebook</span>
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link nav-link-icon" href="https://www.instagram.com/creativetimofficial" target="_blank" data-toggle="tooltip" data-original-title="Follow us on Instagram">
-                            <i class="fab fa-instagram"></i>
-                            <span class="nav-link-inner--text d-lg-none">Instagram</span>
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link nav-link-icon" href="https://twitter.com/creativetim" target="_blank" data-toggle="tooltip" data-original-title="Follow us on Twitter">
-                            <i class="fab fa-twitter-square"></i>
-                            <span class="nav-link-inner--text d-lg-none">Twitter</span>
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link nav-link-icon" href="https://github.com/creativetimofficial" target="_blank" data-toggle="tooltip" data-original-title="Star us on Github">
-                            <i class="fab fa-github"></i>
-                            <span class="nav-link-inner--text d-lg-none">Github</span>
-                        </a>
-                    </li>
-                    <li class="nav-item d-none d-lg-block ml-lg-4">
-                        <a href="https://www.creative-tim.com/product/argon-dashboard-pro?ref=ad_upgrade_pro" target="_blank" class="btn btn-neutral btn-icon">
-                            <span class="btn-inner--icon">
-                                <i class="fas fa-shopping-cart mr-2"></i>
-                            </span>
-                            <span class="nav-link-inner--text">Upgrade to PRO</span>
-                        </a>
-                    </li>
-                </ul>*@
+                <ul class="navbar-nav mr-auto">
+                    <li class="nav-item">                      
+                          <a asp-controller="Home" asp-action="Index" type="button" class="nav-link"><span>Nithin</span> </a>
+                          </li>
+               
+               
+                    @if (Context.Session.GetString("SignIn") == "True")
+                    {
+                        <li  class="nav-item">
+                            <a asp-controller="Users" asp-action="SignOut" type="button" class="nav-link"><span>Sign Out</span> </a>
+                        </li>
+                    }
+                    else
+                    {
+                        <li class="nav-item">
+                            <a asp-controller="Users" asp-action="AddDetails" type="button" class="nav-link"><span>Sign Up</span> </a>
+                        </li>
+                    }
+                </ul>
+               
             </div>
         </div>
     </nav>
-    
+
 
     <div class="container">
         <main role="main" class="pb-3">
@@ -135,30 +92,35 @@
             <div class="row align-items-center justify-content-xl-between">
                 <div class="col-xl-6">
                     <div class="copyright text-center text-xl-left text-muted">
-                         <a asp-controller="Home" asp-action="Index" class="font-weight-bold ml-1" >Nithin</a>
+                        <a asp-controller="Home" asp-action="Index" class="font-weight-bold ml-1">Nithin</a>
                     </div>
                 </div>
                 <div class="col-xl-6">
                     <ul class="nav nav-footer justify-content-center justify-content-xl-end">
                         <li class="nav-item">
-                            <a class="nav-link" asp-controller="Home" asp-action="Index" >Nithin</a>
+                            <a class="nav-link" asp-controller="Home" asp-action="Index">Nithin</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link " target="_blank" asp-controller="Home" asp-action="ContactUs">Contact Us</a>
                         </li>
                         @*<li class="nav-item">
-                            <a href="https://www.creative-tim.com/presentation" class="nav-link" target="_blank">About Us</a>
+                        <a href="https://www.creative-tim.com/presentation" class="nav-link" target="_blank">About Us</a>
                         </li>
                         <li class="nav-item">
-                            <a href="http://blog.creative-tim.com" class="nav-link" target="_blank">Blog</a>
+                        <a href="http://blog.creative-tim.com" class="nav-link" target="_blank">Blog</a>
                         </li>
                         <li class="nav-item">
-                            <a href="https://github.com/creativetimofficial/argon-dashboard/blob/master/LICENSE.md" class="nav-link" target="_blank">MIT License</a>
+                        <a href="https://github.com/creativetimofficial/argon-dashboard/blob/master/LICENSE.md" class="nav-link" target="_blank">MIT License</a>
                         </li>*@
                     </ul>
                 </div>
             </div>
         </div>
+        <style>
+            #Forli {
+                text-align:right;
+            }
+        </style>
     </footer>
     <!-- Argon Scripts -->
     <!-- Core -->
