--- a/Nithin2003/Views/Users/EditDetails.cshtml
+++ b/Nithin2003/Views/Users/EditDetails.cshtml
@@ -1,7 +1,7 @@
 ﻿@model MyUser
 @{
     ViewData["Title"] = "EditDetails";
-    Layout = "~/Views/Shared/_Dashboard.cshtml";
+    Layout = "~/Views/Shared/_Form.cshtml";
 }
 
 @*<h1>EditDetails</h1>
@@ -237,7 +237,7 @@
 
                                 <div class="text-center">
                                     
-                                    <input type="submit" class="btn btn-primary my-4" name="btnsubmit" value="submit" />
+                                    <input type="submit" class="btn btn-primary my-4" name="btnsubmit" value="Update" />
                                     <a asp-controller="Admin" asp-action="Index" class="btn btn-primary my-4" type="button">Back To User Details</a>
                                 </div>
                             </form>
@@ -275,24 +275,7 @@
     </div>
     </div>
     </footer>*@
-    <footer class="footer pt-0">
-        <div class="row align-items-center justify-content-lg-between">
-            <div class="col-lg-6">
-                @*<div class="copyright text-center  text-lg-left  text-muted">
-                &copy; 2020 <a href="https://www.creative-tim.com" class="font-weight-bold ml-1" target="_blank">Creative Tim</a>
-                </div>*@
-            </div>
-            <div class="col-lg-6">
-                <ul class="nav nav-footer justify-content-center justify-content-lg-end">
-
-                    <li>
-                        <a class="nav-link scrollto" asp-controller="Home" asp-action="ContactUs">Contact Us</a>
-                    </li>
-
-                </ul>
-            </div>
-        </div>
-    </footer>
+   
     <!-- Argon Scripts -->
     <!-- Core -->
     @*<script src="../assets/vendor/jquery/dist/jquery.min.js"></script>
