--- a/Nithin2003/Views/Dashboard/UserLoginDetails.cshtml
+++ b/Nithin2003/Views/Dashboard/UserLoginDetails.cshtml
@@ -1,9 +1,11 @@
-﻿
-@model IEnumerable<MyLoanRequest>
+﻿@model IEnumerable<UserHistory>
 @{
-    ViewData["Title"] = "TrackLoanRequest";
-    Layout = "~/Views/Shared/_DashBoard.cshtml";
+    ViewData["Title"] = "UserLoginDetails";
+    Layout = "~/Views/Shared/_Dashboard.cshtml";
+
 }
+
+@*<h1>UserLoginDetails</h1>*@
 
 <!DOCTYPE html>
 <html>
@@ -17,7 +19,7 @@
             <div class="sidenav-header  align-items-center">
                 <a class="navbar-brand" href="javascript:void(0)">
                     <a asp-controller="Home" asp-action="Index" type="button">Nithin</a>
-                    @*<img src="~/Argon-assets/img/brand/blue.png" class="navbar-brand-img" alt="...">*@
+
                 </a>
             </div>
             <div class="navbar-inner">
@@ -25,9 +27,7 @@
                 <div class="collapse navbar-collapse" id="sidenav-collapse-main">
                     <!-- Nav items -->
                     <ul class="navbar-nav">
-                        @*<li class="nav-item">
-                        <a asp-controller="DashBoard" asp-action="TransferMoney" class="btn btn-primary my-4" type="button">Transfer Money</a>
-                        </li>*@
+
 
                         <li class="nav-item">
                             <a class="nav-link active" asp-controller="DashBoard" asp-action="TransferMoney">
@@ -177,11 +177,12 @@
                             <table class="table align-items-center table-flush">
                                 <thead class="thead-light">
                                     <tr>
-                                        <th>User Loan Id</th>
-                                        <th>Requested Username</th>
-                                        <th> User Loan Amount</th>
-                                        <th>Last Modified</th>
-                                        <th> Loan Request Status</th>
+
+                                        <th>User name</th>
+                                        <th> User Action</th>
+                                        <th>Time</th>
+                                        <th>User IP Address</th>
+
 
 
 
@@ -196,135 +197,48 @@
 
                                     <tbody class="list">
                                         <tr>
-                                            <th scope="row">
-                                                <div class="media align-items-center">
-
-                                                    <div class="media-body">
-                                                        <span class="name mb-0 text-sm">@users.LoanId</span>
-                                                    </div>
-                                                </div>
-                                            </th>
-                                            @*<td class="budget">
-                                        @{
-                                        int age = DateTime.Now.Year - users.Age.Year;
-                                        }
-                                        @age years
-                                        </td>*@
                                             <td>
-                                                <span class="badge badge-dot mr-4">
-                                                    <i class="bg-warning"></i>
-                                                    <span class="status">@users.RequestedUsername</span>
+                                            <span class="name mb-0 text-sm">@users.UserName</span>
+                                            </td>
+                                            <td>
+                                                <span>
+
+                                                    <span class="status">@users.Action</span>
                                                 </span>
                                             </td>
                                             <td>
-                                                <div class=" ni ni-money-coins">
-                                                    @*<div class="avatar-group">
-                                                <a href="#" class="avatar avatar-sm rounded-circle" data-toggle="tooltip" data-original-title="Ryan Tompson">
-                                                <img alt="Image placeholder" src="~/Argon-assets/img/theme/team-1.jpg">
-                                                </a>
-                                                <a href="#" class="avatar avatar-sm rounded-circle" data-toggle="tooltip" data-original-title="Romina Hadid">
-                                                <img alt="Image placeholder" src="~/Argon-assets/img/theme/team-2.jpg">
-                                                </a>
-                                                <a href="#" class="avatar avatar-sm rounded-circle" data-toggle="tooltip" data-original-title="Alexander Smith">
-                                                <img alt="Image placeholder" src="~/Argon-assets/img/theme/team-3.jpg">
-                                                </a>
-                                                <a href="#" class="avatar avatar-sm rounded-circle" data-toggle="tooltip" data-original-title="Jessica Doe">
-                                                <img alt="Image placeholder" src="~/Argon-assets/img/theme/team-4.jpg">
-                                                </a>
-                                                </div>*@
-                                                    @users.LoanAmount
+                                                <div>
+
+                                                    @users.Time
                                                 </div>
                                             </td>
                                             <td>
-                                        <span class="">@users.LastModified</span>
-                                        </td>
-                                        <td>
-                                        <span class="">@users.LoanRequestStatus</span>
-                                        </td>
+                                                <span>@users.IPAddress</span>
+                                            </td>
 
-                                            @*<div class="dropdown">
-                                        <a class="btn btn-sm btn-icon-only text-light" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                        <i class="fas fa-ellipsis-v"></i>
-                                        </a>
-                                        <div class="dropdown-menu dropdown-menu-right dropdown-menu-arrow">
-                                        <a class="dropdown-item" href="#">Action</a>
-                                        <a class="dropdown-item" href="#">Another action</a>
-                                        <a class="dropdown-item" href="#">Something else here</a>
-                                        </div>
-                                        </div>*@
+
+                                            
 
 
                                             @*<td><div class="btn"> <a asp-controller="Dashboard" asp-action="ApproveLoan" asp-route-LoanId="@users.LoanId">Approve Loan</a></div></td>
 
-                                            <td><div class="btn"> <a asp-controller="Dashboard" asp-action="RejectLoan" asp-route-LoanId="@users.LoanId" style="color:red">Reject Loan</a></div></td>*@
+                                        <td><div class="btn"> <a asp-controller="Dashboard" asp-action="RejectLoan" asp-route-LoanId="@users.LoanId" style="color:red">Reject Loan</a></div></td>*@
                                         </tr>
 
                                     </tbody>
                                 }
                             </table>
                         </div>
-                        @*<!-- Card footer -->
-                        <div class="card-footer py-4">
-                        <nav aria-label="...">
-                        <ul class="pagination justify-content-end mb-0">
-                        <li class="page-item disabled">
-                        <a class="page-link" href="#" tabindex="-1">
-                        <i class="fas fa-angle-left"></i>
-                        <span class="sr-only">Previous</span>
-                        </a>
-                        </li>
-                        <li class="page-item active">
-                        <a class="page-link" href="#">1</a>
-                        </li>
-                        <li class="page-item">
-                        <a class="page-link" href="#">2 <span class="sr-only">(current)</span></a>
-                        </li>
-                        <li class="page-item"><a class="page-link" href="#">3</a></li>
-                        <li class="page-item">
-                        <a class="page-link" href="#">
-                        <i class="fas fa-angle-right"></i>
-                        <span class="sr-only">Next</span>
-                        </a>
-                        </li>
-                        </ul>
-                        </nav>
-                        </div>*@
+                       
                     </div>
                 </div>
             </div>
 
-            <!-- Footer -->
-            @*<footer class="footer pt-0">
-                <div class="row align-items-center justify-content-lg-between">
-                    <div class="col-lg-6">
-                        <div class="copyright text-center  text-lg-left  text-muted">
-                            &copy; 2020 <a href="" class="font-weight-bold ml-1" target="_blank">Nithin</a>
-                        </div>
-                    </div>
-                    <div class="col-lg-6">
-                        <ul class="nav nav-footer justify-content-center justify-content-lg-end">
-                            <li class="nav-item">
-                                <a href="" class="nav-link" target="_blank">Nithin</a>
-                                @*</li>
-                                <li class="nav-item">
-                                <a href="https://www.creative-tim.com/presentation" class="nav-link" target="_blank">About Us</a>
-                                </li>
-                                <li class="nav-item">
-                                <a href="http://blog.creative-tim.com" class="nav-link" target="_blank">Blog</a>
-                                </li>
-                                <li class="nav-item">
-                                <a href="https://github.com/creativetimofficial/argon-dashboard/blob/master/LICENSE.md" class="nav-link" target="_blank">MIT License</a>
-                                </li>
-                        </ul>
-                    </div>
-                </div>
-            </footer>*@
+           
             <footer class="footer pt-0">
                 <div class="row align-items-center justify-content-lg-between">
                     <div class="col-lg-6">
-                        @*<div class="copyright text-center  text-lg-left  text-muted">
-                        &copy; 2020 <a href="https://www.creative-tim.com" class="font-weight-bold ml-1" target="_blank">Creative Tim</a>
-                        </div>*@
+                        
                     </div>
                     <div class="col-lg-6">
                         <ul class="nav nav-footer justify-content-center justify-content-lg-end">
