DbBackup and Other Changes

--- a/Nithin2003/Views/DashBoard/Index.cshtml
+++ b/Nithin2003/Views/DashBoard/Index.cshtml
@@ -58,16 +58,25 @@
                             <a class="nav-link active" asp-controller="DashBoard" asp-action="UserLoanRequest">
                                 <i class="ni ni-money-coins"></i>
                                 <span class="nav-link-text">Request a Loan</span>
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link active" asp-controller="DashBoard" asp-action="TrackLoanRequest">
-                                <i class="ni ni-money-coins"></i>
-                                <span class="nav-link-text">Track Loan Status</span>
-                            </a>
-                        </li>
+                            </a>                          
 
+                        </li>
+                        
+                            <li class="nav-item">
+                                <a class="nav-link active" asp-controller="DashBoard" asp-action="TrackLoanRequest">
+                                    <i class="ni ni-money-coins"></i>
+                                    <span class="nav-link-text">Track Loan Status</span>
+                                </a>
+                            </li>
                         <li class="nav-item">
+                            <a class="nav-link active" asp-controller="DashBoard" asp-action="_UserLoginDetails">
+                                <i class="ni ni-money-coins"></i>
+                                <span class="nav-link-text">User LogIn History</span>
+                            </a>
+                        </li>
+                        
+
+                       @* <li class="nav-item">
                             <a class="nav-link">
                                 <i class="ni ni-tv-2 text-primary"></i>
                                 <span class="nav-link-text">Dashboard</span>
@@ -149,7 +158,7 @@
                                 <span class="nav-link-text">Upgrade to PRO</span>
                             </a>
                         </li>
-                    </ul>
+                    </ul>*@
                 </div>
             </div>
         </div>
