--- a/Nithin2003/Views/Dashboard/LoanAmountRequest.cshtml
+++ b/Nithin2003/Views/Dashboard/LoanAmountRequest.cshtml
@@ -34,7 +34,7 @@
                     @*<img src="~/Argon-assets/img/brand/blue.png" class="navbar-brand-img" alt="...">*@
                 </a>
             </div>
-            <div class="navbar-inner">
+            @*<div class="navbar-inner">
                 <!-- Collapse -->
                 <div class="collapse navbar-collapse" id="sidenav-collapse-main">
                     <!-- Nav items -->
@@ -128,7 +128,7 @@
                         </li>
                     </ul>
                 </div>
-            </div>
+            </div>*@
         </div>
     </nav>
     <!-- Main content -->
