--- a/Nithin2003/Views/Shared/_DashBoard.cshtml
+++ b/Nithin2003/Views/Shared/_DashBoard.cshtml
@@ -57,95 +57,79 @@
                             </a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link active" asp-controller="DashBoard" asp-action="_UserLoginDetails">
+                                <i class="ni ni-money-coins"></i>
+                                <span class="nav-link-text">User LogIn History</span>
+                            </a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link active" asp-controller="DashBoard" asp-action="TrackLoanRequest">
                                 <i class="ni ni-money-coins"></i>
                                 <span class="nav-link-text">Track Loan Status</span>
                             </a>
                         </li>
 
-                        <li class="nav-item">
-                            <a class="nav-link ">
-                                <i class="ni ni-tv-2 text-primary"></i>
-                                <span class="nav-link-text">Dashboard</span>
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link">
-                                <i class="ni ni-pin-3 text-primary"></i>
-                                <span class="nav-link-text">Google</span>
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link">
-                                <i class="ni ni-single-02 text-yellow"></i>
-                                <span class="nav-link-text">Profile</span>
-                            </a>
-                        </li>
 
-                        <li class="nav-item">
-                            <a class="nav-link">
-                                <i class="ni ni-bullet-list-67 text-default"></i>
-                                <span class="nav-link-text">Tables</span>
-                            </a>
+
+
+                        @*<li class="nav-item">
+                        <a class="nav-link">
+                        <i class="ni ni-key-25 text-info"></i>
+                        <span class="nav-link-text">Login</span>
+                        </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link">
-                                <i class="ni ni-key-25 text-info"></i>
-                                <span class="nav-link-text">Login</span>
-                            </a>
+                        <a class="nav-link">
+                        <i class="ni ni-circle-08 text-pink"></i>
+                        <span class="nav-link-text">Register</span>
+                        </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link">
-                                <i class="ni ni-circle-08 text-pink"></i>
-                                <span class="nav-link-text">Register</span>
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link">
-                                <i class="ni ni-send text-dark"></i>
-                                <span class="nav-link-text">Upgrade</span>
-                            </a>
-                        </li>
+                        <a class="nav-link">
+                        <i class="ni ni-send text-dark"></i>
+                        <span class="nav-link-text">Upgrade</span>
+                        </a>
+                        </li>*@
                     </ul>
-                    <!-- Divider -->
+                    @*<!-- Divider -->
                     <hr class="my-3">
                     <!-- Heading -->
                     <h6 class="navbar-heading p-0 text-muted">
-                        <span class="docs-normal">Documentation</span>
+                    <span class="docs-normal">Documentation</span>
                     </h6>
                     <!-- Navigation -->
                     <ul class="navbar-nav mb-md-3">
-                        <li class="nav-item">
-                            <a class="nav-link" href="https://demos.creative-tim.com/argon-dashboard/docs/getting-started/overview.html" target="_blank">
-                                <i class="ni ni-spaceship"></i>
-                                <span class="nav-link-text">Getting started</span>
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="https://demos.creative-tim.com/argon-dashboard/docs/foundation/colors.html" target="_blank">
-                                <i class="ni ni-palette"></i>
-                                <span class="nav-link-text">Foundation</span>
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="https://demos.creative-tim.com/argon-dashboard/docs/components/alerts.html" target="_blank">
-                                <i class="ni ni-ui-04"></i>
-                                <span class="nav-link-text">Components</span>
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="https://demos.creative-tim.com/argon-dashboard/docs/plugins/charts.html" target="_blank">
-                                <i class="ni ni-chart-pie-35"></i>
-                                <span class="nav-link-text">Plugins</span>
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link active active-pro" href="examples/upgrade.html">
-                                <i class="ni ni-send text-dark"></i>
-                                <span class="nav-link-text">Upgrade to PRO</span>
-                            </a>
-                        </li>
-                    </ul>
+                    <li class="nav-item">
+                    <a class="nav-link" href="https://demos.creative-tim.com/argon-dashboard/docs/getting-started/overview.html" target="_blank">
+                    <i class="ni ni-spaceship"></i>
+                    <span class="nav-link-text">Getting started</span>
+                    </a>
+                    </li>
+                    <li class="nav-item">
+                    <a class="nav-link" href="https://demos.creative-tim.com/argon-dashboard/docs/foundation/colors.html" target="_blank">
+                    <i class="ni ni-palette"></i>
+                    <span class="nav-link-text">Foundation</span>
+                    </a>
+                    </li>
+                    <li class="nav-item">
+                    <a class="nav-link" href="https://demos.creative-tim.com/argon-dashboard/docs/components/alerts.html" target="_blank">
+                    <i class="ni ni-ui-04"></i>
+                    <span class="nav-link-text">Components</span>
+                    </a>
+                    </li>
+                    <li class="nav-item">
+                    <a class="nav-link" href="https://demos.creative-tim.com/argon-dashboard/docs/plugins/charts.html" target="_blank">
+                    <i class="ni ni-chart-pie-35"></i>
+                    <span class="nav-link-text">Plugins</span>
+                    </a>
+                    </li>
+                    <li class="nav-item">
+                    <a class="nav-link active active-pro" href="examples/upgrade.html">
+                    <i class="ni ni-send text-dark"></i>
+                    <span class="nav-link-text">Upgrade to PRO</span>
+                    </a>
+                    </li>
+                    </ul>*@
                 </div>
             </div>
         </div>
@@ -462,7 +446,7 @@
     <script src="~/Argon-assets/vendor/chart.js/dist/Chart.extension.js"></script>
     <!-- Argon JS -->
     <script src="~/Argon-assets/js/argon.js?v=1.2.0"></script>
-    
+
 </body>
 </html>
 @if (Context.Session.GetString("UserStatus") == "Suspend")
@@ -575,8 +559,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <style>
 
-            #ac-wrapper
-            {
+            #ac-wrapper {
                 position: fixed;
                 top: 0;
                 left: 0;
@@ -586,8 +569,7 @@
                 z-index: 1001;
             }
 
-            #popup 
-            {
+            #popup {
                 width: 555px;
                 height: 375px;
                 background: #FFFFFF;
