--- a/Nithin2003/Views/Dashboard/TrackLoanRequest.cshtml
+++ b/Nithin2003/Views/Dashboard/TrackLoanRequest.cshtml
@@ -47,8 +47,13 @@
                                 <span class="nav-link-text">Track Loan Status</span>
                             </a>
                         </li>
-
                         <li class="nav-item">
+                            <a class="nav-link active" asp-controller="DashBoard" asp-action="_UserLoginDetails">
+                                <i class="ni ni-money-coins"></i>
+                                <span class="nav-link-text">User LogIn History</span>
+                            </a>
+                        </li>
+                        @*<li class="nav-item">
                             <a class="nav-link ">
                                 <i class="ni ni-tv-2 text-primary"></i>
                                 <span class="nav-link-text">Dashboard</span>
@@ -130,7 +135,7 @@
                                 <span class="nav-link-text">Upgrade to PRO</span>
                             </a>
                         </li>
-                    </ul>
+                    </ul>*@
                 </div>
             </div>
         </div>
