User login history changes and sidebar navigation update

--- a/Nithin2003/Views/DashBoard/Index.cshtml
+++ b/Nithin2003/Views/DashBoard/Index.cshtml
@@ -69,8 +69,8 @@
                                 </a>
                             </li>
                         <li class="nav-item">
-                            <a class="nav-link active" asp-controller="DashBoard" asp-action="_UserLoginDetails">
-                                <i class="ni ni-money-coins"></i>
+                            <a class="nav-link active" asp-controller="DashBoard" asp-action="UserLoginDetails">
+                                
                                 <span class="nav-link-text">User LogIn History</span>
                             </a>
                         </li>
