--- a/Nithin2003/Views/Admin/Index.cshtml
+++ b/Nithin2003/Views/Admin/Index.cshtml
@@ -70,7 +70,7 @@
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link active" asp-controller="Dashboard" asp-action="UserLoginDetails">                                  
-                                    <span class="nav-link-text">Users Login Details</span>
+                                    <span class="nav-link-text">Users Login History</span>
                                 </a>
                             </li>
                         }
