--- a/Nithin2003/Views/Dashboard/TrackLoanRequest.cshtml
+++ b/Nithin2003/Views/Dashboard/TrackLoanRequest.cshtml
@@ -48,9 +48,9 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" asp-controller="DashBoard" asp-action="_UserLoginDetails">
+                            <a class="nav-link active" asp-controller="DashBoard" asp-action="UserLoginDetails">
                                 <i class="ni ni-money-coins"></i>
-                                <span class="nav-link-text">User LogIn History</span>
+                                <span class="nav-link-text">User Login History</span>
                             </a>
                         </li>
                         @*<li class="nav-item">
