--- a/Nithin2003/Views/Shared/_DashBoard.cshtml
+++ b/Nithin2003/Views/Shared/_DashBoard.cshtml
@@ -57,7 +57,7 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" asp-controller="DashBoard" asp-action="_UserLoginDetails">
+                            <a class="nav-link active" asp-controller="DashBoard" asp-action="UserLoginDetails">
                                 <i class="ni ni-money-coins"></i>
                                 <span class="nav-link-text">User LogIn History</span>
                             </a>
