--- a/Nithin2003/Views/Home/Index.cshtml
+++ b/Nithin2003/Views/Home/Index.cshtml
@@ -124,8 +124,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-6 d-flex flex-column justify-content-center">
-                    <h1 data-aos="fade-up">We offer modern solutions for growing your business</h1>
-                    <h2 data-aos="fade-up" data-aos-delay="400">We are team of talented designers making websites with Bootstrap</h2>
+                    <h1 data-aos="fade-up">I am Nithin </h1>
+                    <h2 data-aos="fade-up" data-aos-delay="400">This Web Application Developed by me to demonstrate my coding skills</h2>
                     <div data-aos="fade-up" data-aos-delay="600">
                         <div class="text-center text-lg-start">
                             <a href="#about" class="btn-get-started scrollto d-inline-flex align-items-center justify-content-center align-self-center">
@@ -152,11 +152,9 @@
 
                     <div class="col-lg-6 d-flex flex-column justify-content-center" data-aos="fade-up" data-aos-delay="200">
                         <div class="content">
-                            <h3>Who We Are</h3>
-                            <h2>Expedita voluptas omnis cupiditate totam eveniet nobis sint iste. Dolores est repellat corrupti reprehenderit.</h2>
-                            <p>
-                                Quisquam vel ut sint cum eos hic dolores aperiam. Sed deserunt et. Inventore et et dolor consequatur itaque ut voluptate sed et. Magnam nam ipsum tenetur suscipit voluptatum nam et est corrupti.
-                            </p>
+                            <h3>Intruduction</h3>
+                            <h2>I am Dhasari nithin ,I graguated in BCOM(C.A) from Government Degree College Armoor Under Telangana University </h2>
+                            
                             <div class="text-center text-lg-start">
                                 <a href="#" class="btn-read-more d-inline-flex align-items-center justify-content-center align-self-center">
                                     <span>Read More</span>
@@ -173,7 +171,7 @@
                 </div>
             </div>
 
-        </section><!-- End About Section -->
+       @*  </section><!-- End About Section -->
         <!-- ======= Values Section ======= -->
         <section id="values" class="values">
 
@@ -212,9 +210,9 @@
 
                 </div>
 
-            </div>
+            </div> *@
 
-        </section><!-- End Values Section -->
+       @*  </section><!-- End Values Section -->
         <!-- ======= Counts Section ======= -->
         <section id="counts" class="counts">
             <div class="container" data-aos="fade-up">
@@ -263,7 +261,7 @@
 
                 </div>
 
-            </div>
+            </div> *@
         </section><!-- End Counts Section -->
         <!-- ======= Features Section ======= -->
         <section id="features" class="features">
@@ -271,14 +269,14 @@
             <div class="container" data-aos="fade-up">
 
                 <header class="section-header">
-                    <h2>Features</h2>
-                    <p>Laboriosam et omnis fuga quis dolor direda fara</p>
+                    <h2></h2>
+                    <p>My Skills</p>
                 </header>
 
                 <div class="row">
 
                     <div class="col-lg-6">
-                        <img src="~/flex-assets/img/features.png" class="img-fluid" alt="">
+                        @* <img src="~/flex-assets/img/features.png" class="img-fluid" alt=""> *@
                     </div>
 
                     <div class="col-lg-6 mt-5 mt-lg-0 d-flex">
@@ -287,55 +285,55 @@
                             <div class="col-md-6" data-aos="zoom-out" data-aos-delay="200">
                                 <div class="feature-box d-flex align-items-center">
                                     <i class="bi bi-check"></i>
-                                    <h3>Eos aspernatur rem</h3>
+                                    <h3>C programming language</h3>
                                 </div>
                             </div>
 
                             <div class="col-md-6" data-aos="zoom-out" data-aos-delay="300">
                                 <div class="feature-box d-flex align-items-center">
                                     <i class="bi bi-check"></i>
-                                    <h3>Facilis neque ipsa</h3>
+                                    <h3>C#</h3>
                                 </div>
                             </div>
 
                             <div class="col-md-6" data-aos="zoom-out" data-aos-delay="400">
                                 <div class="feature-box d-flex align-items-center">
                                     <i class="bi bi-check"></i>
-                                    <h3>Volup amet voluptas</h3>
+                                    <h3>Database Sql</h3>
                                 </div>
                             </div>
 
                             <div class="col-md-6" data-aos="zoom-out" data-aos-delay="500">
                                 <div class="feature-box d-flex align-items-center">
                                     <i class="bi bi-check"></i>
-                                    <h3>Rerum omnis sint</h3>
+                                    <h3>Basics in Html</h3>
                                 </div>
                             </div>
 
                             <div class="col-md-6" data-aos="zoom-out" data-aos-delay="600">
                                 <div class="feature-box d-flex align-items-center">
                                     <i class="bi bi-check"></i>
-                                    <h3>Alias possimus</h3>
+                                    <h3>Basics in Css</h3>
                                 </div>
                             </div>
 
                             <div class="col-md-6" data-aos="zoom-out" data-aos-delay="700">
                                 <div class="feature-box d-flex align-items-center">
                                     <i class="bi bi-check"></i>
-                                    <h3>Repellendus mollitia</h3>
+                                    <h3>Asp.net core mvc</h3>
                                 </div>
                             </div>
 
                         </div>
                     </div>
 
-                </div> <!-- / row -->
-                <!-- Feature Tabs -->
-                <div class="row feture-tabs" data-aos="fade-up">
-                    <div class="col-lg-6">
-                        <h3>Neque officiis dolore maiores et exercitationem quae est seda lidera pat claero</h3>
+                   @*  </div> <!-- / row -->
+                    <!-- Feature Tabs -->
+                    <div class="row feture-tabs" data-aos="fade-up">
+                        <div class="col-lg-6">
+                            <h3>Neque officiis dolore maiores et exercitationem quae est seda lidera pat claero</h3>
 
-                        <!-- Tabs -->
+                            <!-- Tabs -->
                         <ul class="nav nav-pills mb-3">
                             <li>
                                 <a class="nav-link active" data-bs-toggle="pill" href="#tab1">Saepe fuga</a>
@@ -465,9 +463,9 @@
                             </div>
                         </div>
 
-                    </div>
+                    </div> *@
 
-                </div><!-- End Feature Icons -->
+               @*  </div><!-- End Feature Icons -->
 
             </div>
 
@@ -625,8 +623,8 @@
             </div>
 
         </section><!-- End Pricing Section -->
-        <!-- ======= F.A.Q Section ======= -->
-        <section id="faq" class="faq">
+        <!-- ======= F.A.Q Section ======= --> *@
+       @*  <section id="faq" class="faq">
 
             <div class="container" data-aos="fade-up">
 
@@ -730,7 +728,7 @@
 
                 </div>
 
-            </div>
+            </div> *@
 
         </section><!-- End F.A.Q Section -->
         <!-- ======= Portfolio Section ======= -->
@@ -887,7 +885,7 @@
             </div>
 
         </section><!-- End Portfolio Section -->
-        <!-- ======= Testimonials Section ======= -->
+       @*  <!-- ======= Testimonials Section ======= -->
         <section id="testimonials" class="testimonials">
 
             <div class="container" data-aos="fade-up">
@@ -986,8 +984,8 @@
 
             </div>
 
-        </section><!-- End Testimonials Section -->
-        <!-- ======= Team Section ======= -->
+        </section><!-- End Testimonials Section --> *@
+       @*  <!-- ======= Team Section ======= -->
         <section id="team" class="team">
 
             <div class="container" data-aos="fade-up">
@@ -1079,8 +1077,8 @@
 
             </div>
 
-        </section><!-- End Team Section -->
-        <!-- ======= Clients Section ======= -->
+        </section><!-- End Team Section --> *@
+        @* <!-- ======= Clients Section ======= -->
         <section id="clients" class="clients">
 
             <div class="container" data-aos="fade-up">
@@ -1104,8 +1102,8 @@
                     <div class="swiper-pagination"></div>
                 </div>
             </div>
-
-        </section><!-- End Clients Section -->
+ *@
+        @* </section><!-- End Clients Section -->
         <!-- ======= Recent Blog Posts Section ======= -->
         <section id="recent-blog-posts" class="recent-blog-posts">
 
@@ -1149,8 +1147,8 @@
 
             </div>
 
-        </section><!-- End Recent Blog Posts Section -->
-        <!-- ======= Contact Section ======= -->
+        </section><!-- End Recent Blog Posts Section --> *@
+        @* <!-- ======= Contact Section ======= -->
         <section id="contact" class="contact">
 
             <div class="container" data-aos="fade-up">
@@ -1235,8 +1233,8 @@
             </div>
 
         </section><!-- End Contact Section -->
-
-    </main><!-- End #main -->
+ *@
+    </main>@* <!-- End #main -->
     <!-- ======= Footer ======= -->
     <footer id="footer" class="footer">
 
@@ -1309,9 +1307,9 @@
 
                 </div>
             </div>
-        </div>
+        </div> *@
 
-        <div class="container">
+        @* <div class="container">
             <div class="copyright">
                 &copy; Copyright <strong><span>FlexStart</span></strong>. All Rights Reserved
             </div>
@@ -1323,7 +1321,7 @@
                 Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
             </div>
         </div>
-    </footer><!-- End Footer -->
+    </footer><!-- End Footer --> *@
 
     <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
 
